--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -46,7 +46,7 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks is not set
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
+# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs is not set
 # National language packs, luci-i18n-base:
 # CONFIG_PACKAGE_luci-i18n-base-bg is not set
