--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -41,15 +41,15 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-core=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-geodata=y
 #CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Kcptun is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Dns2socks is not set
-# CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin is not set
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray-plugin=y
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple-obfs is not set
 # National language packs, luci-i18n-base:
 # CONFIG_PACKAGE_luci-i18n-base-bg is not set
